--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "xenon/laravelbdsms": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.16",
         "fakerphp/faker": "^1.23",
         "laravel/boost": "^1.8",
         "laravel/pail": "^1.2.2",
