--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "socialiteproviders/instagram": "^5.1",
         "socialiteproviders/tiktok": "^5.2",
         "uzzal/acl": "^3.0",
-        "xenon/laravelbdsms": "^1.0"
+        "xenon/laravelbdsms": "^1.0",
+        "yajra/laravel-datatables": "^12.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
