--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2|^8.3",
         "brian2694/laravel-toastr": "^5.59",
+        "intervention/image-laravel": "^1.5",
         "laravel/framework": "^12.0",
         "laravel/jetstream": "^5.4",
         "laravel/sanctum": "^4.0",
